--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,10 @@
 // Global Imports
 
-@import 'utilities/index.scss';
-@import 'base/index.scss';
-@import 'components/index.scss';
+// @import 'utilities/index';
+// @import 'base/index';
+// @import 'components/index';
+
+@import 'utilities/variables',
+        'base/styles',
+        'components/buttons',
+        'components/grid';
