--- a/scss/utilities/_placeHolders.scss
+++ b/scss/utilities/_placeHolders.scss
@@ -5,18 +5,18 @@
 // Headlines
 // Nav items
 
-%links {
+// %links {
 
-}
+// }
 
-%images {
+// %images {
 
-}
+// }
 
-%headlines {
+// %headlines {
 
-}
+// }
 
-%navItems {
+// %navItems {
   
-}
+// }
