--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,12 @@
   text-transform: uppercase;
   padding: 0.75em 3em;
   border-radius: 0.35em;
-  margin: 1em 1.5em; }
+  margin: 1em 1.5em;
+  color: #fff; }
   .btn--info {
     background-color: #927bc1; }
+    .btn--info .theme__colors {
+      color: #fff; }
   .btn--warning {
     background-color: #fd7856; }
   .btn--error {
@@ -17,9 +20,6 @@
     background-color: #63cc82; }
   .btn--default {
     background-color: #51ddfc; }
-
-.theme__colors {
-  color: white; }
 
 .container {
   width: 100%;
@@ -32,31 +32,30 @@
   clear: both; }
 
 .grid__col, .grid__col--3, .grid__col--4, .grid__col--5, .grid__col--6, .grid__col--7, .grid__col--8, .grid__col--12 {
-  display: inline-block; }
-  .grid__col--3 {
-    width: 24%;
-    background-color: #deb2ee; }
-  .grid__col--4 {
-    width: 32.33%;
-    background-color: #7ee6fd; }
-  .grid__col--5 {
-    width: 40.67%;
-    background-color: #88d9a0; }
-  .grid__col--6 {
-    width: 49%;
-    background-color: #3fabca; }
-  .grid__col--7 {
-    width: 57.33%;
-    background-color: #ec9fa3; }
-  .grid__col--8 {
-    width: 65.67%;
-    background-color: #fd9f85; }
-  .grid__col--12 {
-    width: 100%;
-    background-color: #80e8d1; }
-
-.theme__colors {
+  display: inline-block;
+  margin: auto 8px;
   color: #888280;
   text-align: center; }
+  .grid__col--3 {
+    width: 23.5714285714%;
+    background-color: #deb2ee; }
+  .grid__col--4 {
+    width: 31.9047619048%;
+    background-color: #7ee6fd; }
+  .grid__col--5 {
+    width: 40.4761904762%;
+    background-color: #88d9a0; }
+  .grid__col--6 {
+    width: 48.5714285714%;
+    background-color: #3fabca; }
+  .grid__col--7 {
+    width: 56.6666666667%;
+    background-color: #ec9fa3; }
+  .grid__col--8 {
+    width: 64.7619047619%;
+    background-color: #fd9f85; }
+  .grid__col--12 {
+    width: 98.5714285714%;
+    background-color: #80e8d1; }
 
 /*# sourceMappingURL=styles.css.map */
