--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -8,9 +8,11 @@
 // .blockquote {
   
 // }
-// .headline--primary {
+.headline--primary {
+  color: $color-primary ;
   
-// }
-// .headline--secondary {
+}
+.headline--secondary {
+  text-align: left;
   
-// }
+ }
