--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,4 +19,7 @@
 
 // Component Styles
 @import 'components/buttons',
-        'components/grid';
+        'components/grid',
+        'components/navigation',
+        'components/images',
+        'components/typography';
