--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -21,3 +21,14 @@
     @error "No value could be found for '#{$break}'."
   }
 }
+
+
+// Flexbox Settings
+@mixin flex($flex, $direction, $wrap) {
+  display: $flex;
+  flex-direction: $direction; 
+  flex-wrap: $wrap;
+}
+
+
+                                                                                                                                    
