--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,8 +1,8 @@
 // Components Imports
 
-@import 'components/buttons';
-@import 'components/forms';
-@import 'components/grid';
-@import 'components/images';
-@import 'components/navigation';
-@import 'components/typography';
+@import "buttons";
+@import "forms";
+@import "grid";
+@import "images";
+@import "navigation";
+@import "typography";
