--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -1,18 +1,26 @@
 // Typography:
-// .container {
-  
-// }
-// .link {
-  
-// }
-// .blockquote {
-  
-// }
+.container {
+  font-family: $font-family-secondary; 
+ }
+.link {
+  color:$color-secondary;
+  text-decoration: none; 
+ }
+.blockquote {
+  font-style: italic;
+  font-size: 1.2em;
+  color: $grey;
+  font-weight: $font-weight--light;
+  padding-left: 10px;
+  border-left: 7px solid $color-primary;
+  border-top-left-radius: $br;
+  border-bottom-left-radius: $br;
+  }
 .headline--primary {
   color: $color-primary ;
   
 }
 .headline--secondary {
-  text-align: left;
-  
- }
+  color: $grey;
+  font-weight: $font-weight--light;
+   }
