--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -1,11 +1,20 @@
 // Image:
  .img--logo {
-   display: block;
-   text-align: center;
+  @include m(logo) {
+    width: 160px;
    }
-// .img--frame {
-  
-// }
-// .img--avatar {
-  
-// }
+.img--frame {
+  max-width: 100%;
+  height: auto;
+  outline-offset: 10px;
+  outline: $grey solid .1em;
+  margin: 1em auto 1em auto;
+  }
+ }
+.img--avatar {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 1em auto 1em auto;
+   }
+  }
