--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -1,15 +1,21 @@
 // Navigation:
- .nav__item {
-   display: flex;
-   font-size: 1.125em;
-   text-align: center;
-   font-weight: 600;
-   margin-top: 1.5em;
-   
- }
+.nav {
 
- .nav__item a:hover {
-   background-color: $color-primary;
-   color: white;
-   
+  margin-top: em(20px);
+  margin-bottom: em(30px);
+
+  @include e(item) {
+    @extend %nav-item-disp;
+    a {
+      @extend %nav-item-link;
+
+      &:hover {
+        @extend %nav-item-on;
+        color: $white;
+      }
+    }
+  }
+  @include mq(med) {
+    display: flex;
+  }
  }
