--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,25 +1,26 @@
 // Global Imports
 
-// @import 'utilities/index';
-// @import 'base/index';
-// @import 'components/index';
+ @import 'utilities/index';
+ @import 'components/index';
+ @import 'base/index';
+ 
 
 // =======================================
 //    Partial Imports
 // =======================================
 
 //  Utillities
-@import 'utilities/variables',
-        'utilities/functions',
-        'utilities/mixins',
-        'utilities/placeholders';
+// @import 'utilities/variables',
+//         'utilities/functions',
+//         'utilities/mixins',
+//         'utilities/placeholders';
 
 //  Base Styles
-@import 'base/base';
+// @import 'base/base';
 
 // Component Styles
-@import 'components/buttons',
-        'components/grid',
-        'components/navigation',
-        'components/images',
-        'components/typography';
+// @import 'components/buttons',
+//         'components/grid',
+//         'components/navigation',
+//         'components/images',
+//         'components/typography';
