--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -1,5 +1,7 @@
 // Utilities Imports
 
-@import 'utilities/mixins';
-@import 'utilities/placeHolders';
-@import 'utilities/variables';
+@import "globalvariables";
+@import "placeholders";
+@import "mixins";
+@import "extends";
+@import "functions";
