--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -12,8 +12,8 @@
       @content;
     }
   }
-  @else if $break == "large" {
-    @media(min-width: $brkpoint-lg) {
+  @else if $break == "med" {
+    @media (min-width: $break-md + 1) {
       @content;
     }
   }
@@ -21,14 +21,52 @@
     @error "No value could be found for '#{$break}'."
   }
 }
+//Flexbox settings
 
-
-// Flexbox Settings
-@mixin flex($flex, $direction, $wrap) {
+@mixin flex($flex, $direction, $wrap, $justify) {
   display: $flex;
-  flex-direction: $direction; 
+  flex-direction: $direction;
   flex-wrap: $wrap;
+  justify-content: $justify;
 }
+
+@mixin g-columns {
+  @for $i from 1 through $g-col-count {
+    $context: g-context($g-col-width, $g-col-count ,$g-gutter-width) !global;
+    $target: ($g-col-width * $i) + ($g-gutter-width * ($i - 1));
+    // Generate and output the column modifier classes
+    &--#{$i} {
+      flex-basis: percentage($target / $context);
+    }
+  }
+}
+
+
+
+@mixin doubly($margin: 1em) {
+	& + & {
+	  margin-left: $margin;
+    @content;
+	}
+}
+
+//Element BEM Selectors
+
+@mixin e($element) {
+  &__#{$element} {
+    @content;
+  }
+}
+
+
+//Modifier BEM Selectors
+
+@mixin m($modifier) {
+  &--#{$modifier} {
+    @content;
+  }
+}
+
 
 
                                                                                                                                     
